--- a/BaseModels.ipynb
+++ b/BaseModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb156980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>skin_tone</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>is_face</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TRAIN0001.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TRAIN0002.png</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TRAIN0005.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TRAIN0007.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TRAIN0009.png</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6837</th>\n",
+       "      <td>TRAIN9992.png</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6838</th>\n",
+       "      <td>TRAIN9993.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6839</th>\n",
+       "      <td>TRAIN9995.png</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6840</th>\n",
+       "      <td>TRAIN9998.png</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6841</th>\n",
+       "      <td>TRAIN9999.png</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6842 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               name  skin_tone  gender  age  is_face\n",
+       "0     TRAIN0001.png          0       0    1    False\n",
+       "1     TRAIN0002.png          5       1    0     True\n",
+       "2     TRAIN0005.png          1       1    0    False\n",
+       "3     TRAIN0007.png          1       0    1     True\n",
+       "4     TRAIN0009.png          7       0    1    False\n",
+       "...             ...        ...     ...  ...      ...\n",
+       "6837  TRAIN9992.png          4       0    2     True\n",
+       "6838  TRAIN9993.png          1       1    1     True\n",
+       "6839  TRAIN9995.png          8       0    1     True\n",
+       "6840  TRAIN9998.png          4       1    1    False\n",
+       "6841  TRAIN9999.png          3       1    1     True\n",
+       "\n",
+       "[6842 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_labels = pd.read_csv('train_data_clean.csv')\n",
     "test_labels = pd.read_csv('test_data_clean.csv')\n",
@@ -47,12 +191,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ad5bca33",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type object got multiple values for keyword argument 'upsample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-242709bfe258>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 159\u001b[0;31m m,h = train_model(\n\u001b[0m\u001b[1;32m    160\u001b[0m     DualHistogramModel(\n\u001b[1;32m    161\u001b[0m         \u001b[0mhidden_dims\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-242709bfe258>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, train_df, validation_df, root, epochs, lr, batch_size, patience, loss_weights, save_path, histogram, upsample, random_upsample, softmax_upsample_weights, upsample_validation, random_upsample_validation, **kwargs)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mupsample\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0mpatience\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpatience\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     train_loader = FaceGenerator(train_df,Constants.data_root,\n\u001b[0m\u001b[1;32m     42\u001b[0m                                  \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m                                  \u001b[0mupsample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupsample\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/workspace/SRIA_Bias/DataLoaders.py\u001b[0m in \u001b[0;36mFaceGenerator\u001b[0;34m(labels, data_root, batch_size, workers, random_upsample, fit_df, softmax, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m         \u001b[0mupsampler\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshuffle_on_epoch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m     \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFaceGeneratorIterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_root\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfit_df\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfit_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mupsample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupsample\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshuffle_on_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnum_workers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: type object got multiple values for keyword argument 'upsample'"
+     ]
+    }
+   ],
    "source": [
     "def categorical_accuracy(ypred,y):\n",
     "    #y is index, ypred i s one hot like in loss functions\n",
@@ -81,7 +239,11 @@
     "                loss_weights = [2,1,.5],\n",
     "                save_path=None,\n",
     "                histogram =False,\n",
-    "                upsample=True,\n",
+    "                upsample=False,\n",
+    "                random_upsample=True,\n",
+    "                softmax_upsample_weights=False,\n",
+    "                upsample_validation=False,\n",
+    "                random_upsample_validation=False,\n",
     "                **kwargs,\n",
     "               ):\n",
     "    if save_path is None:\n",
@@ -90,11 +252,22 @@
     "            save_path += '_balanced'\n",
     "    if upsample:\n",
     "        patience = int(patience/5) + 1\n",
-    "    train_loader = FaceGenerator(train_df,Constants.data_root,batch_size=batch_size,upsample=upsample,**kwargs)\n",
-    "    validation_loader = FaceGenerator(validation_df,Constants.data_root,validation=True,batch_size=batch_size,upsample=upsample,**kwargs)\n",
+    "    train_loader = FaceGenerator(train_df,Constants.data_root,\n",
+    "                                 batch_size=batch_size,\n",
+    "                                 upsample=upsample,\n",
+    "                                 random_upsample=random_upsample,\n",
+    "                                 softmax=softmax_upsample_weights,\n",
+    "                                 **kwargs)\n",
+    "    validation_loader = FaceGenerator(validation_df,Constants.data_root,\n",
+    "                                      validation=True,\n",
+    "                                      batch_size=batch_size,\n",
+    "                                      upsample=upsample_validation,\n",
+    "                                     random_upsample=random_upsample_upsample_validation,\n",
+    "                                     softmax=softmax_upsample_weights,\n",
+    "                                      **kwargs)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    model = model.to(device)\n",
-    "    model.train(True)\n",
+    "    model.train()\n",
     "    loss_fn = torch.nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "    \n",
@@ -173,10 +346,12 @@
     "        print('val loss', val_loss, 'val accuracy', val_acc)\n",
     "#         torch.save(model.state_dict(), save_path + '_epoch' + str(epoch))\n",
     "        if best_val_loss > val_loss:\n",
-    "            torch.save(model,save_path)\n",
     "            best_weights = model.state_dict()\n",
     "            best_val_loss = val_loss\n",
     "            steps_since_improvement = 0\n",
+    "            if epoch > 1:\n",
+    "                torch.save(model,save_path)\n",
+    "                torch.save(model.state_dict(),save_path+'_states')\n",
     "        else:\n",
     "            steps_since_improvement += 1\n",
     "        \n",
