--- a/DataFormatting.ipynb
+++ b/DataFormatting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb156980",
    "metadata": {},
    "outputs": [],
@@ -44,13 +44,13 @@
     "    \n",
     "    return df\n",
     "\n",
-    "train_labels = filtered_labels('train_labels.csv')\n",
-    "test_labels = filtered_labels('labels.csv')"
+    "# train_labels = filtered_labels('train_labels.csv')\n",
+    "# test_labels = filtered_labels('labels.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c3e331cc",
    "metadata": {},
    "outputs": [],
@@ -71,39 +71,470 @@
     "    df['is_face'] = df.name.apply(is_face)\n",
     "    return df\n",
     "\n",
-    "train_labels = detect_nonfaces(train_labels,data_root)\n",
-    "test_labels = detect_nonfaces(test_labels,data_root)\n",
-    "train_labels[train_labels.is_face]"
+    "# train_labels = detect_nonfaces(train_labels,data_root)\n",
+    "# test_labels = detect_nonfaces(test_labels,data_root)\n",
+    "# train_labels[train_labels.is_face]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6a5cf0bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_labels = train_labels.sample(frac=.2,replace=False)\n",
-    "train_labels = train_labels.drop(validation_labels.index)\n",
-    "train_labels"
+    "# validation_labels = train_labels.sample(frac=.2,replace=False)\n",
+    "# train_labels = train_labels.drop(validation_labels.index)\n",
+    "# train_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5ed5657a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels.to_csv('train_data_clean.csv',index=False)\n",
-    "validation_labels.to_csv('validation_data_clean.csv',index=False)\n",
-    "test_labels.to_csv('test_data_clean.csv',index=False)"
+    "# train_labels.to_csv('train_data_clean.csv',index=False)\n",
+    "# validation_labels.to_csv('validation_data_clean.csv',index=False)\n",
+    "# test_labels.to_csv('test_data_clean.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b45f4f5d-3e99-4bfc-85dc-c24d3fda69ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>skin_tone</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>is_face</th>\n",
+       "      <th>0-0-0_anchor</th>\n",
+       "      <th>0-0-0_bias</th>\n",
+       "      <th>0-0-1_anchor</th>\n",
+       "      <th>0-0-1_bias</th>\n",
+       "      <th>...</th>\n",
+       "      <th>9-1-1_anchor</th>\n",
+       "      <th>9-1-1_bias</th>\n",
+       "      <th>9-2-0_anchor</th>\n",
+       "      <th>9-2-0_bias</th>\n",
+       "      <th>9-2-1_anchor</th>\n",
+       "      <th>9-2-1_bias</th>\n",
+       "      <th>9-3-0_anchor</th>\n",
+       "      <th>9-3-0_bias</th>\n",
+       "      <th>9-3-1_anchor</th>\n",
+       "      <th>9-3-1_bias</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>TRAIN0001.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.025769</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.975044</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.485796</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.513853</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.463127</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.025415</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.974689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>TRAIN0002.png</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.654119</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.345881</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.345881</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.654119</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.345881</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.654119</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.345881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>TRAIN0005.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.433162</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.622616</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.898250</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.075956</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.265410</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.422038</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.611491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>TRAIN0007.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.917475</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.946971</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.031364</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.986136</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.015633</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.985252</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.014748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>TRAIN0009.png</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.024288</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.975989</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.989455</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037822</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.989523</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.037686</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.989387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6837</th>\n",
+       "      <td>6837</td>\n",
+       "      <td>TRAIN9992.png</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.322163</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.605432</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.642963</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.358371</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.641640</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.358366</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.641634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6838</th>\n",
+       "      <td>6838</td>\n",
+       "      <td>TRAIN9993.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.139229</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.291743</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.325924</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.674003</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.826517</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.923751</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.076265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6839</th>\n",
+       "      <td>6839</td>\n",
+       "      <td>TRAIN9995.png</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.999805</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000379</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.067027</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.934254</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.934828</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6840</th>\n",
+       "      <td>6840</td>\n",
+       "      <td>TRAIN9998.png</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.040941</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.963131</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.957443</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.042272</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.964462</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.038910</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.961100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6841</th>\n",
+       "      <td>6841</td>\n",
+       "      <td>TRAIN9999.png</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001232</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.001228</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.999534</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000062</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.999998</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6842 rows × 166 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0           name  skin_tone  gender  age  is_face  \\\n",
+       "0              0  TRAIN0001.png          0       0    1    False   \n",
+       "1              1  TRAIN0002.png          5       1    0     True   \n",
+       "2              2  TRAIN0005.png          1       1    0    False   \n",
+       "3              3  TRAIN0007.png          1       0    1     True   \n",
+       "4              4  TRAIN0009.png          7       0    1    False   \n",
+       "...          ...            ...        ...     ...  ...      ...   \n",
+       "6837        6837  TRAIN9992.png          4       0    2     True   \n",
+       "6838        6838  TRAIN9993.png          1       1    1     True   \n",
+       "6839        6839  TRAIN9995.png          8       0    1     True   \n",
+       "6840        6840  TRAIN9998.png          4       1    1    False   \n",
+       "6841        6841  TRAIN9999.png          3       1    1     True   \n",
+       "\n",
+       "      0-0-0_anchor  0-0-0_bias  0-0-1_anchor  0-0-1_bias  ...  9-1-1_anchor  \\\n",
+       "0              0.0    0.025769           0.0    0.975044  ...           0.0   \n",
+       "1              0.0    1.654119           0.0    1.345881  ...           0.0   \n",
+       "2              0.0    0.433162           0.0    0.622616  ...           0.0   \n",
+       "3              0.0    2.917475           0.0    1.946971  ...           0.0   \n",
+       "4              0.0    0.024288           0.0    0.975989  ...           0.0   \n",
+       "...            ...         ...           ...         ...  ...           ...   \n",
+       "6837           0.0    2.322163           0.0    2.605432  ...           0.0   \n",
+       "6838           0.0    1.139229           0.0    0.291743  ...           0.0   \n",
+       "6839           0.0    0.999805           0.0    0.000379  ...           0.0   \n",
+       "6840           0.0    0.040941           0.0    0.963131  ...           0.0   \n",
+       "6841           0.0    0.001232           0.0    1.001228  ...           0.0   \n",
+       "\n",
+       "      9-1-1_bias  9-2-0_anchor  9-2-0_bias  9-2-1_anchor  9-2-1_bias  \\\n",
+       "0       1.485796           0.0    0.513853           0.0    1.463127   \n",
+       "1       0.345881           0.0    0.654119           0.0    0.345881   \n",
+       "2       0.898250           0.0    1.075956           0.0    1.265410   \n",
+       "3       0.031364           0.0    0.986136           0.0    0.015633   \n",
+       "4       0.989455           0.0    0.037822           0.0    0.989523   \n",
+       "...          ...           ...         ...           ...         ...   \n",
+       "6837    0.642963           0.0    0.358371           0.0    0.641640   \n",
+       "6838    0.325924           0.0    1.674003           0.0    0.826517   \n",
+       "6839    0.067027           0.0    1.934254           0.0    0.934828   \n",
+       "6840    1.957443           0.0    0.042272           0.0    0.964462   \n",
+       "6841    1.999534           0.0    0.000066           0.0    1.000062   \n",
+       "\n",
+       "      9-3-0_anchor  9-3-0_bias  9-3-1_anchor  9-3-1_bias  \n",
+       "0              0.0    0.025415           0.0    0.974689  \n",
+       "1              0.0    0.654119           0.0    0.345881  \n",
+       "2              0.0    0.422038           0.0    0.611491  \n",
+       "3              0.0    0.985252           0.0    0.014748  \n",
+       "4              0.0    1.037686           0.0    1.989387  \n",
+       "...            ...         ...           ...         ...  \n",
+       "6837           0.0    0.358366           0.0    0.641634  \n",
+       "6838           0.0    0.923751           0.0    0.076265  \n",
+       "6839           0.0    1.000400           0.0    0.000974  \n",
+       "6840           0.0    0.038910           0.0    0.961100  \n",
+       "6841           0.0    0.000002           0.0    0.999998  \n",
+       "\n",
+       "[6842 rows x 166 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = pd.read_csv('train_data_augmented_balanceddualhistogram.csv')\n",
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f65db24d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4869, 166)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3281)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3099)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.2990)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3126)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3080)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3096)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3233)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3130)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3192)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3143)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3344)\n",
+      "torch.Size([100, 3, 160, 160]) tensor(0.3176)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from DataLoaders import *\n",
+    "test = FaceGenerator(labels,Constants.data_root,random_upsample=True,softmax=True)\n",
+    "for i,t in enumerate(test):\n",
+    "    print(t[0].shape,t[0].mean())\n",
+    "    if i > 10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3a26da21-27ef-4dc5-a218-9533b5913a74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# len(test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65db24d",
+   "id": "022c60ec-ca21-4d4c-81b0-1a9f696b6731",
    "metadata": {},
    "outputs": [],
    "source": []
