fixed bugs with different upsampling, not yet tested on triplet version

--- a/TripletModels.ipynb
+++ b/TripletModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -581,12 +581,6 @@
    },
    "outputs": [],
    "source": [
-    "def categorical_accuracy(ypred,y):\n",
-    "    #y is index, ypred i s one hot like in loss functions\n",
-    "    predicted = torch.argmax(ypred,1).long()\n",
-    "    correct = torch.mean((y.long() == predicted).float())\n",
-    "    return correct\n",
-    "\n",
     "def save_train_history(model,history,root=''):\n",
     "    model_name = model.get_identifier()\n",
     "    \n",
@@ -680,7 +674,7 @@
     "            count += 1\n",
     "            with torch.no_grad():\n",
     "                for i,(y,ypred) in enumerate(zip(y_batch,outputs)):\n",
-    "                    accuracy = categorical_accuracy(ypred.float(),format_y(y))\n",
+    "                    accuracy = Utils.categorical_accuracy(ypred.float(),format_y(y))\n",
     "                    running_accuracy[i] += accuracy.item()\n",
     "        return running_loss/count,running_embed_loss/count, [a/count for a in running_accuracy]\n",
     "    \n",
@@ -688,6 +682,7 @@
     "        running_loss = 0\n",
     "        running_embed_loss = 0\n",
     "        running_accuracy = [0,0,0]\n",
+    "        running_f1 = [0,0,0]\n",
     "        count = 0\n",
     "        with torch.no_grad():\n",
     "            for i, [x_batch, y_batch] in enumerate(validation_loader):\n",
@@ -698,10 +693,12 @@
     "                running_embed_loss += embedding_loss.item()\n",
     "                count += 1\n",
     "                for i,(y,ypred) in enumerate(zip(y_batch, outputs)):\n",
-    "                    accuracy = categorical_accuracy(ypred.float(),format_y(y))\n",
+    "                    accuracy = Utils.categorical_accuracy(ypred.float(),format_y(y))\n",
+    "                    f1, precision, recall = Utils.macro_f1(torch.argmax(ypred.float(),axis=1),format_y(y))\n",
     "                    running_accuracy[i] += accuracy.item()\n",
-    "        return running_loss/count,running_embed_loss/count, [a/count for a in running_accuracy]\n",
-    "    \n",
+    "                    running_f1[i] += f1.item()\n",
+    "        return running_loss/count,running_embed_loss/count, [a/count for a in running_accuracy], [f/count for f in running_f1]\n",
+    "    shorted = lambda array: [np.round(a, 3) for a in array]\n",
     "    \n",
     "    best_val_loss = starting_loss\n",
     "    steps_since_improvement = 0\n",
@@ -712,10 +709,11 @@
     "        print('epoch',epoch)\n",
     "        model.train()\n",
     "        avg_loss,avg_embed_loss, avg_acc = train_epoch(model)\n",
-    "        print('train loss', avg_loss,'train embed loss',avg_embed_loss, 'train accuracy', avg_acc)\n",
+    "        print('train loss', avg_loss,'train embed loss',avg_embed_loss, 'train accuracy', shorten(avg_acc))\n",
     "        model.eval()\n",
-    "        val_loss,val_embed_loss, val_acc = val_epoch(model)\n",
-    "        print('val loss', val_loss, 'val_embed_loss', val_embed_loss, 'val accuracy', val_acc)\n",
+    "        val_loss,val_embed_loss, val_acc, val_f1 = val_epoch(model)\n",
+    "        print('val loss', val_loss, 'val_embed_loss', val_embed_loss, \n",
+    "              'val accuracy', shorten(val_acc), 'val f1', shorten(val_f1))\n",
     "        #don't save immediately in case I cancel training\n",
     "        if best_val_loss > val_loss and epoch > 1:\n",
     "            torch.save(model,save_path)\n",
